--- a/ModuleA/Properties/Resources.en-Us.resx
+++ b/ModuleA/Properties/Resources.en-Us.resx
@@ -118,57 +118,57 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Autorun" xml:space="preserve">
-    <value>Автостарт</value>
+    <value>Autostart</value>
   </data>
   <data name="Background" xml:space="preserve">
-    <value>Обои</value>
+    <value>Wallpaper</value>
   </data>
   <data name="BattaryСharge" xml:space="preserve">
-    <value>Заряд батареи</value>
+    <value>Battary charge</value>
   </data>
   <data name="BlockButton" xml:space="preserve">
-    <value>Блокировка</value>
+    <value>Block</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Закрыть</value>
+    <value>Close</value>
   </data>
   <data name="Common" xml:space="preserve">
-    <value>Общие</value>
+    <value>Common</value>
   </data>
   <data name="DefaultButton" xml:space="preserve">
-    <value>Сброс</value>
+    <value>Reset</value>
   </data>
   <data name="English" xml:space="preserve">
-    <value>Английский</value>
+    <value>English</value>
   </data>
   <data name="Exit" xml:space="preserve">
-    <value>Выход из системы</value>
+    <value>Exit</value>
   </data>
   <data name="Language" xml:space="preserve">
-    <value>Язык</value>
+    <value>Language</value>
   </data>
   <data name="Move" xml:space="preserve">
-    <value>Перемещение виджета</value>
+    <value>Moving the widget</value>
   </data>
   <data name="Reboot" xml:space="preserve">
-    <value>Перезагрузка</value>
+    <value>Reboot</value>
   </data>
   <data name="Russian" xml:space="preserve">
-    <value>Русский</value>
+    <value>Russian</value>
   </data>
   <data name="Settings" xml:space="preserve">
-    <value>Настройки</value>
+    <value>Settings</value>
   </data>
   <data name="ShutDown" xml:space="preserve">
-    <value>Выключение</value>
+    <value>Shutdown</value>
   </data>
   <data name="Sleep" xml:space="preserve">
-    <value>Сон</value>
+    <value>Sleep</value>
   </data>
   <data name="SystemControl" xml:space="preserve">
-    <value>Контроль системы</value>
+    <value>System control</value>
   </data>
   <data name="WorkTime" xml:space="preserve">
-    <value>Время работы</value>
+    <value>Work time</value>
   </data>
 </root>
