--- a/ModuleA/Properties/Resources.resx
+++ b/ModuleA/Properties/Resources.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Apply" xml:space="preserve">
+    <value>Применить</value>
+  </data>
   <data name="Autorun" xml:space="preserve">
     <value>Автостарт</value>
+  </data>
+  <data name="BackButton" xml:space="preserve">
+    <value>Назад</value>
   </data>
   <data name="Background" xml:space="preserve">
     <value>Обои</value>
