--- a/City/Properties/Resources.resx
+++ b/City/Properties/Resources.resx
@@ -118,10 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="serverapp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\serverapp.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="startserverapp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\startserverapp.vbs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  <data name="StartServer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\StartServer.vbs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
   </data>
 </root>
